tests/rosetta/transpiler/Java/conditional-structures-1.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenconditional-structures-1351171693/001/Main.java:4: error: not a statement
            null;
            ^
1 error
