tests/rosetta/transpiler/Java/conditional-structures-1.java
public class Main {
    static void example1(boolean flag) {
        if (flag) {
            null;
        }
    }
    public static void main(String[] args) {
    }
}
